package com.job.enums;

public enum Role {
    CANDIDATE,
    RECRUITER,
    CEO,
    ADMIN
}
