package com.Jobstream.V0.enums;

public enum ApplicationStatus {
    PENDING, REVIEWING, ACCEPTED, REJECTED
}
