package com.job.enums;

public enum MembershipStatus {
    ACTIVE,
    INACTIVE,
    PENDING,
    SUSPENDED
}

